fix(combobox): keep focus while filtering and improve input on small devices
closes #106
closes #139

--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -55,7 +55,7 @@
     @include css-var(font-size, clr-combobox-font-size, $clr-combobox-font-size, $clr-use-custom-properties);
 
     &.multi {
-      min-width: $clr-ng-multiselect-min-width;
+      min-width: calc(min($clr-ng-multiselect-min-width, 100%));
       padding-bottom: $clr_baselineRem_0_125;
     }
 
